Add React from CDN

--- a/public/index.html
+++ b/public/index.html
@@ -12,14 +12,15 @@
     <br />
 
     <!-- VIA Widget -->
-    <link href="https://via.exchange/widget/index.css" rel="stylesheet"/>
-    <script src="https://via.exchange/widget/index.js"></script>
     <div
       id="via-pay-widget"
       data-some="SOME"
       style="background-color: black; color: white;"
     >
     </div>
+    <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
+    <link href="https://via-widget.vercel.app/index.css" rel="stylesheet"/>
+    <script src="https://via-widget.vercel.app/index.js"></script>
     <!-- /VIA Widget -->
 
 
