--- a/example/index.html
+++ b/example/index.html
@@ -11,17 +11,23 @@
     <br />
     <br />
 
+
+
     <!-- VIA Widget -->
     <div
       id="via-pay-widget"
       data-some="SOME"
-      style="background-color: black; color: white;"
+      data-title="Mint your Shrooms"
+      data-unit="Shroom"
+      data-batch="1st generation"
+      style="background-color: #15121d; color: #ffffff;"
     >
     </div>
     <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
     <link href="https://via-widget.vercel.app/index.css" rel="stylesheet"/>
     <script src="https://via-widget.vercel.app/index.js"></script>
     <!-- /VIA Widget -->
+
 
 
     <br />
