--- a/example/index.html
+++ b/example/index.html
@@ -20,6 +20,7 @@
       data-title="Mint your Shrooms"
       data-unit="Shroom"
       data-batch="1st generation"
+      data-url="https://pay.via.exchange/nft/bb811382-1f1b-4376-8884-5f74bd808f83/"
       style="background-color: #15121d; color: #ffffff;"
     >
     </div>
