--- a/example/index.html
+++ b/example/index.html
@@ -15,12 +15,12 @@
 
     <!-- VIA Widget -->
     <div
-      id="via-pay-widget"
-      data-some="SOME"
+      id="via-widget"
       data-title="Mint your Shrooms"
+      data-amount="150"
       data-unit="Shroom"
-      data-batch="1st generation"
-      data-url="https://pay.via.exchange/nft/bb811382-1f1b-4376-8884-5f74bd808f83/"
+      data-set="1st generation"
+      data-offerId="bb811382-1f1b-4376-8884-5f74bd808f83"
       style="background-color: #15121d; color: #ffffff;"
     >
     </div>
