--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       data-amount="150"
       data-unit="Shroom"
       data-set="1st generation"
-      data-go="https://pay.via.exchange/nft/bb811382-1f1b-4376-8884-5f74bd808f83/"
+      data-offerId="bb811382-1f1b-4376-8884-5f74bd808f83"
       style="background-color: #15121d; color: #ffffff;"
     >
     </div>
