--- a/example/index.html
+++ b/example/index.html
@@ -20,12 +20,12 @@
       data-amount="150"
       data-unit="Shroom"
       data-set="1st generation"
-      data-offerId="bb811382-1f1b-4376-8884-5f74bd808f83"
+      data-id="bb811382-1f1b-4376-8884-5f74bd808f83"
       style="background-color: #15121d; color: #ffffff;"
     >
     </div>
-    <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
     <link href="https://via-widget.vercel.app/index.css" rel="stylesheet"/>
+    <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
     <script src="https://via-widget.vercel.app/index.js"></script>
     <!-- /VIA Widget -->
 
