--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>VIA Widget example</title>
+    <title>Via Widget example</title>
   </head>
   <body>
     <br />
