--- a/public/index.html
+++ b/public/index.html
@@ -17,15 +17,10 @@
     <div
       id="via-widget"
       data-id="ace4c308-e20d-4a70-82eb-91db2fea7a89"
-      data-title="Mint your Shrooms"
-      data-amount="150"
-      data-unit="Shroom"
-      data-set="1st generation"
-      style="background-color: #15121d; color: #ffffff;"
     >
     </div>
     <link href="index.css" rel="stylesheet"/>
-    <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react@17/umd/react.production.min.js" crossorigin></script>
     <script src="index.js"></script>
     <!-- /VIA Widget -->
 
