Multiple widgets per page support

--- a/public/index.html
+++ b/public/index.html
@@ -13,16 +13,33 @@
 
 
 
-    <!-- VIA Widget -->
-    <div
-      id="via-widget"
-      data-id="ace4c308-e20d-4a70-82eb-91db2fea7a89"
-    >
-    </div>
-    <link href="index.css" rel="stylesheet"/>
+    <!-- 1) Place the necessary scripts (once) -->
+
+    <!-- VIA Widget scripts -->
     <script src="https://unpkg.com/react@17/umd/react.production.min.js" crossorigin></script>
     <script src="index.js"></script>
-    <!-- /VIA Widget -->
+    <link href="index.css" rel="stylesheet"/>
+    <!-- /VIA Widget scripts -->
+
+
+
+    <!-- 2) Place the button -->
+
+    <!-- VIA Widget Button-->
+    <div class="via-widget" data-id="ace4c308-e20d-4a70-82eb-91db2fea7a89"></div>
+    <!-- /VIA Widget Button -->
+
+
+
+    <!-- 3) Place more buttons if needed -->
+
+    <!-- VIA Widget Button-->
+    <div class="via-widget" data-id="b0d8205d-ba8e-42b3-9ebb-b0716ad1ce49"></div>
+    <!-- /VIA Widget Button -->
+
+    <!-- VIA Widget Button-->
+    <div class="via-widget" data-id="b852c368-36f0-4d98-a86b-69cf85feb74b"></div>
+    <!-- /VIA Widget Button -->
 
 
 
