--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 
 
 
-    <!-- 1) Place the necessary scripts (once) -->
+    <!-- 1) Place the necessary scripts (do it once for one page) -->
 
     <!-- VIA Widget scripts -->
     <script src="https://unpkg.com/react@17/umd/react.production.min.js" crossorigin></script>
